projetos/desafio-final-dk8s/semana-3/k8s/tipsbank-locust/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tipsbank-locust
  labels:
    team: banking
    env: production
