projetos/desafio-final-dk8s/semana-3/k8s/tipsbank-locust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: tipsbank-locust
  labels:
    app: locust
    team: banking
    env: production
spec:
  selector:
    app: locust
  ports:
    - port: 8089
      targetPort: 8089
      name: web
