projetos/desafio-final-dk8s/semana-3/k8s/tipsbank-locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  namespace: tipsbank-locust
  labels:
    app: locust
    team: banking
    env: production
  annotations:
    cert-manager.io/cluster-issuer: tipsbank-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - locust.tipsbank.local
      secretName: locust-tls
  rules:
    - host: locust.tipsbank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust
                port:
                  number: 8089
